# turtle

./: .doit.db.bak  .doit.db.dir  .gitignore  .readthedocs.yaml  README.md  T  Untitled-Copy1.ipynb  Untitled2.ipynb  dataframe.ipynb  environment.yml  group_turtles.ipynb  maping turtle.ipynb  overlaping images.ipynb  process_turtle_xml.ipynb  pyproject.toml  requirements.txt  requirments.txt  requrements.txt  test  trah (try to locate surveys area).ipynb
binder/: environment.yml
docs/: conf.py  index.rst  requirements.txt
examples/: example_config.yml
notebooks/: 01_rename_files.ipynb  02_correct_flight_path.ipynb  03_make_polygons.ipynb  04_sat_image.ipynb  06_make_segmentation_set.ipynb  0_rename_old.ipynb  Untitled-Copy1.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  bias.ipynb  cameramtx.ipynb  filter_position.ipynb  green factor.ipynb  group_turtles.ipynb  input.json  maping turtle.ipynb  overlaping images.ipynb  process_turtle2_xml.ipynb  process_turtle_xml.ipynb  source.csv
rml/: report.prep
scripts/: build_DJIP4Pro.bat  build_DJIP4Pro_clean.sh  build_DJIP4RTK.sh  build_DJIP4RTKPro.bat  formatcards.sh  montarge.py  striplabel.py
src/: .doit.db.bak  DJIMavic2.py  DJIMavicPro2.py  DJIP4Pro.py  DJIP4RTK.py  DJIPMavicPro2.py  build_DJI4Pro.bat  build_DJIMavic2.bat  build_DJIP4Pro.sh  build_DJIP4RTK.sh  build_training_set.py  buildzarr.py  card_copy.py  clean.py  combine_surveys.py  concat_labelme.py  concat_turtles.py  config.py  count_turtles.py  datacopy.py  dodo.py  drone.py  exifdata.py  exifdata_general.py  getbase.py  group_tags.py  rsync.py  (+20 more)
(+66 files in other folders)
