[tool.poetry]
name = "turtledrone"
version = "0.1.0"
description = ""
authors = ["Nick Mortimer <nick.mortimer@csiro.au>"]
readme = "README.md"

[tool.poetry.group.docs.dependencies]
jupyter = "^1.0.0"

[tool.poetry.dependencies]
python = "^3.9"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
