[tool.poetry]
name = "turtledrone"
version = "0.1.0"
description = ""
authors = ["Nick Mortimer <nick.mortimer@csiro.au>"]
readme = "README.md"

[tool.poetry.group.docs.dependencies]
jupyter = "^1.0.0"

[tool.poetry.dependencies]
python = "^3.9"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
nbsphinx = "^0.9.3"

[tool.poetry.scripts]
initalise = 'turtledrone:initalise'
exifdata = 'turtledrone:exifdata'
DJIP4RTK = 'turtledrone:DJIP4RTK'
setsurveyarea = 'turtledrone:setsurveyarea'
surveys = 'turtledrone:surveys'
reports = 'turtledrone:reports'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
